--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "react-leaflet-control",
   "version": "1.0.0",
   "description": "Dumb Empty Component for control with react leaflet",
-  "main": "index.js",
+  "main": "control.js",
   "scripts": {
-    "test": "echo \"No Tests Yet\""
+    "test": "echo \"No Tests Yet\"",
+    "start": "babel control.jsx -o control.js"
   },
   "keywords": [
     "react",
@@ -16,10 +17,18 @@
   ],
   "author": "Joel <joel@liveby.co>",
   "license": "ISC",
+  "peerDependencies": {
+    "leaflet": "^0.7.7",
+    "react": "^0.14.7 || ^15.0.0",
+    "react-dom": "^0.14.7 || ^15.0.0",
+    "react-leaflet": "^0.11.5"
+  },
   "devDependencies": {
     "babel": "^6.5.2",
+    "babel-cli": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
     "leaflet": "^0.7.7",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
