--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
   "author": "Joel <joel@liveby.co>",
   "license": "ISC",
   "peerDependencies": {
-    "leaflet": "^0.7.7",
+    "leaflet": "^0.7.7 || ^1.0.2",
     "react": "^0.14.7 || ^15.0.0",
     "react-dom": "^0.14.7 || ^15.0.0",
-    "react-leaflet": "^0.11.5"
+    "react-leaflet": "^0.11.5 || ^1.0.1"
   },
   "devDependencies": {
     "babel": "^6.5.2",
