--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-leaflet": "^0.11.5"
+  },
+  "dependencies": {
+    "prop-types": "^15.5.7"
   }
 }
