--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   "license": "ISC",
   "peerDependencies": {
     "leaflet": "^0.7.7 || ^1.0.2",
-    "react": "^0.14.7 || ^15.0.0",
-    "react-dom": "^0.14.7 || ^15.0.0",
+    "react": "^0.14.7 || ^15.0.0 || ^16.0.0",
+    "react-dom": "^0.14.7 || ^15.0.0 || ^16.0.0",
     "react-leaflet": "^0.11.5 || ^1.0.1"
   },
   "devDependencies": {
