--- a/package.json
+++ b/package.json
@@ -18,23 +18,19 @@
   "author": "Joel <joel@liveby.co>",
   "license": "ISC",
   "peerDependencies": {
-    "leaflet": "^0.7.7 || ^1.0.2",
-    "react": "^0.14.7 || ^15.0.0 || ^16.0.0",
-    "react-dom": "^0.14.7 || ^15.0.0 || ^16.0.0",
-    "react-leaflet": "^0.11.5 || ^1.0.1"
+    "leaflet": "^1.0.2",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-leaflet": "^2.0.0"
   },
   "devDependencies": {
     "babel": "^6.5.2",
     "babel-cli": "^6.9.0",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "leaflet": "^0.7.7",
-    "react": "^15.0.2",
-    "react-dom": "^15.0.2",
-    "react-leaflet": "^0.11.5"
-  },
-  "dependencies": {
-    "prop-types": "^15.5.7"
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "leaflet": "^1.0.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-leaflet": "^2.0.0"
   }
 }
