--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Dumb Empty Component for control with react leaflet",
   "homepage": "https://github.com/LiveBy/react-leaflet-control",
   "main": "dist/control.js",
+  "types": "index.d.ts",
   "scripts": {
     "test": "echo \"No Tests Yet\"",
     "start": "babel lib -d dist"
